formateando practicas arduino

--- a/21. Arduino/elegoo_tmp.html
+++ b/21. Arduino/elegoo_tmp.html
@@ -761,9 +761,7 @@ Documentos/Arduino/**librería**s/ArduinoParty/ejemplos
 <p>En esta lección, usted aprenderá cómo programar el tablero de regulador UNO R3 a parpadear el LED integrado de Arduino y cómo descargar programas pasos básicos</p>
 <p>Componente necesario:</p>
 <blockquote>
-<ul>
-<li>(1) x Elegoo Uno R3</li>
-</ul>
+<p><input type="checkbox" id="checkbox0" checked="true"><label for="checkbox0">(1) x Elegoo Uno R3</label></p>
 </blockquote>
 <img width="400" src="file:///e:/Docencia/linux-apuntes/21. Arduino/media/image38.jpeg" id="image38">
 <h3 id="placa-arduino-uno-r3">Placa Arduino UNO R3</h3>
@@ -1745,14 +1743,14 @@ updateShiftRegister();
 <h3 id="componentes-necesarios">Componentes necesarios:</h3>
 <img width="400" src="file:///e:/Docencia/linux-apuntes/21. Arduino/media/image124.jpeg" id="image124">
 <ul>
-<li><input type="checkbox" id="checkbox0" checked="true"><label for="checkbox0">Elegoo Uno R3</label></li>
+<li><input type="checkbox" id="checkbox1" checked="true"><label for="checkbox1">Elegoo Uno R3</label></li>
 <li>[x]830 tie puntos breadboard</li>
 <li>[x]leds</li>
 <li>[x]resistencias de 220 ohmios</li>
 <li>[x]resistencia de 1 k ohm</li>
-<li><input type="checkbox" id="checkbox1" checked="true"><label for="checkbox1">(1) x IC74hc595</label></li>
-<li><input type="checkbox" id="checkbox2" checked="true"><label for="checkbox2">(1) x fotoresistor (fotocélula)</label></li>
-<li><input type="checkbox" id="checkbox3" checked="true"><label for="checkbox3">(16) x M M cables (cables de puente de macho a macho)</label></li>
+<li><input type="checkbox" id="checkbox2" checked="true"><label for="checkbox2">(1) x IC74hc595</label></li>
+<li><input type="checkbox" id="checkbox3" checked="true"><label for="checkbox3">(1) x fotoresistor (fotocélula)</label></li>
+<li><input type="checkbox" id="checkbox4" checked="true"><label for="checkbox4">(16) x M M cables (cables de puente de macho a macho)</label></li>
 </ul>
 <h2 id="fotoc%C3%A9lula">Fotocélula</h2>
 <p>La fotocélula utilizada es de un tipo llamado un resistor dependiente de luz, a veces llamado un LDR. Como su nombre indica, estos componentes actúan como una resistencia, excepto que la resistencia cambia en respuesta a cuanta luz está cayendo sobre ellos.</p>
